Prevent overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,8 @@
 body {
-    margin: 20px;
+    margin: 1vh;
 }
 
 img {
-    max-width: 100%;
+    max-width: 98vw;
+    max-height: 98vh;
 }
